@@ -561,6 +561,9 @@
                             <detectLinks>false</detectLinks>
                             <validateLinks>false</validateLinks>
                             <detectOfflineLinks>false</detectOfflineLinks>
+                            <compilerArgs>
+                                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
